<resources>
    <string name="app_name">Application Study</string>
    <string name="SQlite">SQlite Application Study</string>
    <string name="onCreateDataBase">onCreateDataBase</string>
    <string name="onCreatTable">onCreatTable</string>
    <string name="write">write</string>
    <string name="insert">insert</string>
    <string name="query">query</string>
    <string name="XML_Parser">XML Parser</string>
    <string name="update">update</string>
    <string name="delete">delete_table</string>
    <string name="down_file">file</string>
    <string name="down_other">other</string>
    <string name="download_title">DownLoad In NertWork</string>
    <string name="begin">begin</string>
    <string name="end">end</string>
    <string name="handler">Handler</string>
    <string name="ContentProvide">ConctentProvide</string>
    <string name="BroadcastReceive">BroadcastReceiver</string>
    <string name="registerBroadcast">registerBroadcast</string>
    <string name="unregisterBroadcast">unregisterBroadcast</string>
    <string name="auto_registerBroadcast">auto_registerBroadcast</string>
    <string name="manual_registerBroadcast">manual_registerBroadcast</string>
    <string name="manual_unregisterBroadcast">manual_unregisterBroadcast</string>
    <string name="enable_wifi">enable_wifi</string>
    <string name="stop_wifi">stop_wifi</string>
    <string name="getwifistatus">getwifistatus</string>
    <string name="wifi_manager">WiFi Manager</string>
</resources>
