<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity_back">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_select"
        android:clickable="true"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/SQlite"
        android:textColor="@drawable/color"
        android:textSize="40dp" />

    <Button
        android:id="@+id/onCreateDataBase"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_select"
        android:text="@string/onCreateDataBase" />

    <Button
        android:id="@+id/updateDataBase"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onCreatTable" />

    <Button
        android:id="@+id/write"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/write" />

    <Button
        android:id="@+id/insert"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/insert" />

    <Button
        android:id="@+id/query"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/query" />
</LinearLayout>
